OVerflow fix

--- a/pages/sass/layout/_baser.scss
+++ b/pages/sass/layout/_baser.scss
@@ -2,6 +2,7 @@
     // background-color: red;
     height: 100vh;
     position: relative;
+        overflow-x: hidden;
     &_seaction {
         &_1 {
             height: 80vh;
